[package]
name = "workers"
version = "0.1.0"
edition = "2024"
publish = false
description = "tokenstork CashToken indexer — Rust workers that populate Postgres from BCHN (+ BlockBook, once landed)"

[lib]
# Shared modules (bchn, pg) live here; the binaries import via `use workers::{bchn, pg}`.

# Release profile tuned for smallish systemd-managed binaries.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[dependencies]
# Async runtime.
tokio = { version = "1", features = ["full"] }

# HTTP client for BCHN RPC (+ BlockBook + BCMR + Cauldron + icons).
# rustls avoids OpenSSL linkage hassle. `stream` is required by
# safe_http::read_body_capped which uses bytes_stream() to enforce a
# size cap before serde_json sees the payload.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "deflate", "stream"] }

# JSON (de)serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Postgres. Runtime queries (not the `query!` macros) so we don't need
# DATABASE_URL at compile time and the crate builds on any host.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono"] }

# Time — chrono integrates with sqlx for TIMESTAMPTZ columns.
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Hex <-> bytes for BYTEA columns.
hex = "0.4"

# Base64 for BCHN RPC basic-auth Authorization header.
base64 = "0.22"

# Ergonomic errors in binaries; thiserror if/when we grow typed library errors.
anyhow = "1"
thiserror = "2"

# Structured logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ZMQ SUB socket for BCHN hashblock. Pure-Rust implementation — no libzmq
# native dep required.
zeromq = { version = "0.4", default-features = false, features = ["tokio-runtime", "all-transport"] }

# Arbitrary-precision integers for NUMERIC(78,0) token supplies and balances.
num-bigint = "0.4"
num-traits = "0.2"

# URL-escape category hex when it's used as a path segment in BlockBook URLs.
# (Hex chars never need escaping, but we're defensive against format drift.)
percent-encoding = "2"

# sd_notify for the tail binary's systemd Type=notify + WatchdogSec wiring.
sd-notify = "0.4"

# SHA-256 for content-addressing icons in the safety pipeline. Pure-Rust;
# no native deps.
sha2 = "0.10"

# RIPEMD-160 — second leg of hash160 (RIPEMD160(SHA256(x))). Used by the
# CRC-20 detector to verify output[0] is P2PKH(hash160(symbol)). Pure-Rust.
ripemd = "0.1"

# Image format detection + WebP transcode for the icon safety pipeline.
# `default-features=false` strips formats we don't need (tiff, ico, etc.);
# we keep png/jpeg/webp/gif (first-frame only). Pure-Rust WebP encode — no
# native libwebp linkage.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }

# SVG rasterization for the icon safety pipeline. `resvg` deliberately
# does NOT execute scripts, fetch external `href`s, or follow file://
# references — XSS / SSRF / tracking-pixel surfaces that ruled out
# serving raw SVG bytes don't reach the rendered output. The PNG output
# is then fed back through the same raster path (`decode_raster` →
# Vision → WebP) the rest of the pipeline already trusts.
# `default-features = false` strips system-font discovery (we don't want
# the worker reading /usr/share/fonts) and text rendering — token icons
# with text fall back to no-glyph; issuers should flatten text to paths.
resvg = { version = "0.45", default-features = false, features = ["raster-images"] }
tiny-skia = "0.11"
usvg = { version = "0.45", default-features = false }

# Base64 of image bytes for the Google Vision REST API request body.
# (`base64` crate already in scope above for BCHN auth.)

# Streaming HTTP body reads (size-capped JSON / icon fetches).
futures-util = { version = "0.3", default-features = false }

# DNS resolver used by the SSRF-safe HTTP client. We resolve hostnames
# ourselves, refuse any answer in private/loopback/link-local space,
# pin the resolved IP for the actual connection, and re-validate on
# every redirect target.
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "system-config"] }
